--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "Steve Burton <stevevburton@gmail.com>"
   ],
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/steve-burton/angular-hiking-club",
   "ignore": [
     "**/.*",
     "node_modules",
